Minor bugfix to pdm.buildBlockMesh

--- a/README.org
+++ b/README.org
@@ -40,7 +40,7 @@ Python Library
 * Example
 
 
-#+BEGIN_SRC python
+#+BEGIN_SRC ipython :session pyblockmesh
 import pyblockmesh as pbm
 
 
@@ -51,15 +51,20 @@ v3 = pbm.Vertex(-1, 1,-1)
 v4 = pbm.Vertex(-1,-1, 1)
 v5 = pbm.Vertex( 1,-1, 1)
 v6 = pbm.Vertex( 1, 1, 1)
-v6 = pbm.Vertex(-1, 1, 1)
+v7 = pbm.Vertex(-1, 1, 1)
 
-h1 = pbm.Hexahedron([v0,v1,v2,v3,v4,v5,v6,v7])
+h1 = pbm.Hexahedron([v0,v1,v2,v3,v4,v5,v6,v7],numberOfCells=[3,3,3])
 
-string = pdm.buildBlockMesh()
-blockMeshDict = open(“BlockMeshDict”,”w”)
+string = pbm.buildBlockMesh()
+
+print(string)
+blockMeshDict = open("foo.txt", "wb")
 blockMeshDict.write(string) 
 
 #+END_SRC
+
+#+RESULTS:
+: # Out[1]:
 
 * Requirements
 
